--- a/index.html
+++ b/index.html
@@ -633,12 +633,97 @@
   </section>
 
 
+<!-- Home Blog Section -->
+
+
+<section  id="courses">
+  <div class="we__offer">
+    <div class="heading" >
+      <h2>Latest News & <span> Blogs</span></h2>
+      <p>The BAOIAM blog section is one-stop solution for all current news and updates on what's 
+        happening in the field of education & technology .</p>
+    </div>
+    <div class="we__offer_card">
+      <div class="course_img">
+        <img src="images/blog1.jpg" alt="" />     
+        <div class="img-text" >
+          <div class="sub-img-text">        
+            <div class="main-date"> 
+            <h6 class="number"> 28</h6>
+            <h6 class="month"  >March</h6>
+                   </div>
+                    <div class="main-text" >
+                    <span class="text"  > 
+                      <div class="sub-text" >
+                      <i class="fa fa-tag"></i>
+                        <span>Product Development </span>
+                      </div>
+                    </span>
+                    </div>
+          
+                    </div>
+          
+                  </div>
+      </div>
+
+      <div class="we__offer_content">
+        <h2>Product development is not a course to learn , Its an Art</h2>
+        <div class="subcontent">
+          <p>
+            An important aspect of an product development as an art is the
+            ability to think outside the box.
+          </p>
+        </div>
+        <a href="#" class="course_btn"> Read More</a>
+      </div>
+    </div>
+
+    <div class="we__offer_card">
+      <div class="course_img">
+        <img src="images/blog2.jpg" alt="" />
+        <div class="img-text" >
+<div class="sub-img-text">        
+  <div class="main-date"> 
+  <h6 class="number"> 31</h6>
+  <h6 class="month"  >March</h6>
+         </div>
+          <div class="main-text" >
+          <span class="text"  > 
+            <div class="sub-text" >
+            <i class="fa fa-tag"></i>
+              <span>Enterpreneurship </span>
+            </div>
+          </span>
+          </div>
+          </div>
+        </div>
+      </div>
+      <div class="we__offer_content">
+        <h2>The ERA of Interpreneurship: How You can be the Next Success Story</h2>
+        <div class="subcontent">
+          <p>
+          Starting a business from scratch can be a daunting task,but the reward of entrepreneurship can be significant.
+          </p>
+        </div>
+        <a href="#" class="course_btn"> Read More</a>
+      </div>
+    </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
   <!-- Associations with partners -->
   <section class="startups">
     <div class="wrapper">
       <div class="row">
           <div class="col-lg-12 mb-5 mt-5"><h5>We are associated with businesses and non-profits <span>from startups to MNC's</span></h5></div>
-          <div class="col-lg-2 col-md-3 col-sm-4 col-6"><img src="images/HCL.jpeg" alt=""></div>
+          <div class="col-lg-2 col-md-3 col-sm-4 col-6 "><img src="images/HCL.jpeg" alt=""></div>
           <div class="col-lg-2 col-md-3 col-sm-4 col-6"><img src="images/HelloIntern.jpeg" alt=""></div>
           <div class="col-lg-2 col-md-3 col-sm-4 col-6"><img src="images/Hirect.jpeg" alt=""></div>
           <div class="col-lg-2 col-md-3 col-sm-4 col-6"><img src="images/Internshala.jpeg" alt=""></div>
