--- a/career/career.html
+++ b/career/career.html
@@ -245,7 +245,8 @@
             <div class="container">
               <div class="profile-card">
                 <div class="img">
-                  <img src="./image/customdomain.jpg">
+                    <img src="./Image/customdomain.jpg" alt="">
+                  <!-- <img src="./image/customdomain.jpg"> -->
                 </div>
                 <div class="caption">
                   <h3>Custom Domains</h3>
@@ -259,7 +260,7 @@
               </div>
               <div class="profile-card">
                 <div class="img">
-                  <img src="./image/Dedicated.jpg">
+                  <img src="./Image/Dedicated.jpg">
                 </div>
                 <div class="caption">
                   <h3>Never Sleeps</h3>
@@ -273,7 +274,8 @@
               </div>
               <div class="profile-card">
                 <div class="img">
-                  <img src="./image/growteam.jpg">
+                    <img src="./Image/growteam.jpg" alt="">
+                  <!-- <img src="./image/growteam.jpg"> -->
                 </div>
                 <div class="caption">
                   <h3>Dedicated</h3>
@@ -290,6 +292,8 @@
           </div>
         <!-- ************************** -->
     </section>
+
+
     <section>
         <div class="mycontainer team-container">
             <h1 class="smallheading">Hear from the <span class="special2">team</span></h1>
