Login page added

--- a/career/career.html
+++ b/career/career.html
@@ -61,7 +61,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <button class="btn-1">Login</button>
+                        <a href="../Login/index.html"> <button class="btn-1">Login</button></a>
                     </li>
                 </ul>
             </div>
@@ -253,7 +253,7 @@
                   <p>A short sentence describing this callout</p>
                   <div class="social-links">
                     <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
+                    <a href="#"><i class='bx bxl-instagram insta'></i></a>
                     <a href="#"><i class='bx bxl-twitter'></i></a>
                   </div>
                 </div>
@@ -261,6 +261,7 @@
               <div class="profile-card">
                 <div class="img">
                   <img src="./Image/Dedicated.jpg">
+                <!-- <img src="./image/Dedicated.jpg"> -->
                 </div>
                 <div class="caption">
                   <h3>Never Sleeps</h3>
