--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          </li>
 
           <li class="nav-item">
-            <button class="btn-1">Login</button>
+         <a href="./Login/index.html">  <button class="btn-1">Login</button></a>
           </li>
         </ul>
       </div>
