--- a/career/career.html
+++ b/career/career.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- nav section start-->
-    <header>
+    <header class="header">
         <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light shadow p-2  pr-3" id="navbar">
             <a class="navbar-brand" href="">
                 <img src="./Image/brand.png" alt="">
@@ -44,7 +44,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Career</a>
-                            <a class="dropdown-item" href="../Hire With Us_Final/Hire With Us/hire_with_us.html">Hire from us</a>
+                            <a class="dropdown-item" href="../Hire With Us_Final/Hire With Us/hire_with_us.html">Hire
+                                from us</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -243,54 +244,54 @@
 
         <div class="community">
             <div class="container">
-              <div class="profile-card">
-                <div class="img">
-                    <img src="./Image/customdomain.jpg" alt="">
-                  <!-- <img src="./image/customdomain.jpg"> -->
+                <div class="profile-card">
+                    <div class="img">
+                        <img src="./Image/customdomain.jpg" alt="">
+                        <!-- <img src="./image/customdomain.jpg"> -->
+                    </div>
+                    <div class="caption">
+                        <h3>Custom Domains</h3>
+                        <p>A short sentence describing this callout</p>
+                        <div class="social-links">
+                            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                            <a href="#"><i class='bx bxl-instagram insta'></i></a>
+                            <a href="#"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="caption">
-                  <h3>Custom Domains</h3>
-                  <p>A short sentence describing this callout</p>
-                  <div class="social-links">
-                    <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                    <a href="#"><i class='bx bxl-instagram insta'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                  </div>
+                <div class="profile-card">
+                    <div class="img">
+                        <img src="./Image/Dedicated.jpg">
+                        <!-- <img src="./image/Dedicated.jpg"> -->
+                    </div>
+                    <div class="caption">
+                        <h3>Never Sleeps</h3>
+                        <p>A short sentence describing this callout</p>
+                        <div class="social-links">
+                            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                            <a href="#"><i class='bx bxl-instagram'></i></a>
+                            <a href="#"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="profile-card">
-                <div class="img">
-                  <img src="./Image/Dedicated.jpg">
-                <!-- <img src="./image/Dedicated.jpg"> -->
+                <div class="profile-card">
+                    <div class="img">
+                        <img src="./Image/growteam.jpg" alt="">
+                        <!-- <img src="./image/growteam.jpg"> -->
+                    </div>
+                    <div class="caption">
+                        <h3>Dedicated</h3>
+                        <p>A short sentence describing this callout</p>
+                        <div class="social-links">
+                            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                            <a href="#"><i class='bx bxl-instagram'></i></a>
+                            <a href="#"><i class='bx bxl-twitter'></i></a>
+                        </div>
+                    </div>
                 </div>
-                <div class="caption">
-                  <h3>Never Sleeps</h3>
-                  <p>A short sentence describing this callout</p>
-                  <div class="social-links">
-                    <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                  </div>
-                </div>
-              </div>
-              <div class="profile-card">
-                <div class="img">
-                    <img src="./Image/growteam.jpg" alt="">
-                  <!-- <img src="./image/growteam.jpg"> -->
-                </div>
-                <div class="caption">
-                  <h3>Dedicated</h3>
-                  <p>A short sentence describing this callout</p>
-                  <div class="social-links">
-                    <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                  </div>
-                </div>
-              </div>
             </div>
-        
-          </div>
+
+        </div>
         <!-- ************************** -->
     </section>
 
@@ -354,12 +355,8 @@
                                 <h4>+91 9992754999</h4>
                             </div>
                         </div>
-
-
                     </div>
-
                 </div>
-
             </div>
 
 
@@ -369,9 +366,9 @@
             <div class="contact-right">
                 <h2>Submit Your detail</h2>
                 <!-- <p>
-           Your email address will not be published . Required fields are
-           marked.
-         </p> -->
+                  Your email address will not be published . Required fields are
+                  marked.
+                </p> -->
                 <div class="main-comment">
                     <div class="input-icons">
 
@@ -387,16 +384,16 @@
                             </span>
                         </div>
 
-                        <div class="subcomment">
-                <span>
-                 <input class=" input-field" type="text" placeholder="Phone No." />
+                        <div class="subcomment" >
+                       <span>
+                        <input class=" input-field" type="text" placeholder="Phone No." />
                         <i class="fa fa-phone icon " aria-hidden="true"></i>
 
                         </span>
                         <span>
                             <!-- <label for="course" class="label"> courses</label> -->
-                            <select id="cars">
-                                <option value="Product Development">Select Course</option>
+                            <select id="course">
+                                <option value="course">Select Course</option>
                                 <option value="Product Development">Product Development</option>
                                 <option value=" Enterpreneurship">Enterpreneurship</option>
                                 <option value="Internship">Internship</option>
